More play with CSS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,26 @@
 p {
-    color: red;
+    color: lime;
+    letter-spacing: 0.1em;
+    word-spacing: 0.5em;
+    line-height: 1.5em;
+    text-align: center;
+}
+
+h1 {
+    color: #ffc;
+    background-color: #009;
+    text-decoration: line-through;
+    text-transform: capitalize;
 }
 
 a {
     color: blue;
+}
+
+body {
+    font-size: 35px;
+    font-weight: bolder;
+    font-style: italic;
+    font-family: "comic sans",times,georgia,arial, helvetica, serif;
+    color: navy;
 }
